Getting things sorted out

--- a/Blazm.Usb/Blazm.Usb/Blazm.Usb.csproj
+++ b/Blazm.Usb/Blazm.Usb/Blazm.Usb.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <RootNamespace>Blazm.Hid</RootNamespace>
+    <RootNamespace>Blazm.Usb</RootNamespace>
   </PropertyGroup>
 
 
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.5.21301.17" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.7.21378.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
