--- a/Blazm.Usb/Demos/Blazm.Usb.Server/Properties/launchSettings.json
+++ b/Blazm.Usb/Demos/Blazm.Usb.Server/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Blazm.Hid.Server": {
+    "Blazm.Usb.Server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
